syntax = "proto2";

package chrome_browser_media;

// Chrome requires this.
option optimize_for = LITE_RUNTIME;

// Next available id: 2
message PreloadedData {
  // The data in DAFSA format.
  optional bytes dafsa = 1;
}
